--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
